--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "mongoose": "^5.13.2",
-    "shortid": "^2.2.16"
+    "express": "^4.18.2",
+    "mongoose": "^7.4.0",
+    "nanoid": "^4.0.2"
   }
 }
